--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "node-ssh": "^13.2.1"
+    "node-ssh": "^13.2.x"
   },
   "devDependencies": {
     "@types/node": "^12.7.12",
